new release 1.3.0